Fix Nav-bar icons on mobile version

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -545,8 +545,12 @@
     display: none;
   }
 
+  .nav-bar-white {
+    justify-content: flex-end;
+  }
+
   .white-bar-links {
-    visibility: hidden;
+    display: none;
   }
 }
 
